--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
   <title>卡片 - 完整 HTML 结构</title>
-  <link rel="stylesheet" href="./css/_mdui.min.css"/>
+  <link rel="stylesheet" href="./css/mdui.min.css"/>
   <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
