--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         <div class="mdui-card">
 
           <div class="mdui-card-media">
-            <img src="https://img1.imgtp.com/2023/07/19/hTq0aSRu.png"/>
+            <img src="https://img1.imgtp.com/2023/07/19/SK6nt7aJ.png"/>
             <div class="mdui-card-menu">
                <button class="mdui-btn mdui-btn-icon mdui-text-color-white"> <i class="mdui-icon material-icons">code</i></button>
               <button id="download_shishuo" class="mdui-btn mdui-btn-icon mdui-text-color-white"> <i class="mdui-icon material-icons">file_download</i>
