--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@
           <div class="mdui-card-media">
             <img src="https://img1.imgtp.com/2023/07/19/SK6nt7aJ.png"/>
             <div class="mdui-card-menu">
-               <button class="mdui-btn mdui-btn-icon mdui-text-color-white"> <i class="mdui-icon material-icons">code</i></button>
-              <button id="download_shishuo" class="mdui-btn mdui-btn-icon mdui-text-color-white"> <i class="mdui-icon material-icons">file_download</i>
+               <button class="mdui-btn mdui-btn-icon mdui-text-color-black"> <i class="mdui-icon material-icons">code</i></button>
+              <button id="download_shishuo" class="mdui-btn mdui-btn-icon mdui-text-color-black"> <i class="mdui-icon material-icons">file_download</i>
             </div>
           </div>
           <div class="mdui-card-primary">
