--- a/index.html
+++ b/index.html
@@ -52,6 +52,28 @@
       </div>
     </div>
   </div>
+
+  <div class="mdui-container3">
+    <div class="mdui-row">
+      <div class="mdui-col-sm-6 mdui-col-md-4">
+        <div class="mdui-card">
+
+          <div class="mdui-card-media">
+            <img src="https://img1.imgtp.com/2023/07/19/f4cjxhN9.png"/>
+            <div class="mdui-card-menu">
+               <button class="mdui-btn mdui-btn-icon mdui-text-color-white"> <i class="mdui-icon material-icons">code</i></button>
+              <button id="download_studybar" class="mdui-btn mdui-btn-icon mdui-text-color-white"> <i class="mdui-icon material-icons">file_download</i>
+            </div>
+          </div>
+          <div class="mdui-card-primary">
+            <div class="mdui-card-primary-title">学吧</div>
+            <div class="mdui-card-primary-subtitle">多功能学习助手</div>
+          </div>
+          <div class="mdui-card-content">查资料，定时器，LaTex编辑，还支持自定义计算</div>
+        </div>
+      </div>
+    </div>
+  </div>
   
   <script src="./js/mdui.min.js"></script>
     <script>
@@ -62,6 +84,10 @@
 var myButton1 = document.getElementById('download_shishuo');
     myButton1.addEventListener('click', function() {
       window.open('https://www.pgyer.com/shishuo', 'newWindow');
+});
+var myButton2 = document.getElementById('download_studybar');
+    myButton2.addEventListener('click', function() {
+      window.open('https://www.pgyer.com/studybar', 'newWindow');
 });
   </script>
 </body>
