--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 
-  <div class="mdui-container1">
+  <div class="mdui-container">
     <div class="mdui-row">
       <div class="mdui-col-sm-6 mdui-col-md-4">
         <div class="mdui-card">
@@ -31,7 +31,7 @@
     </div>
   </div>
 
-<div class="mdui-container2">
+<div class="mdui-container">
     <div class="mdui-row">
       <div class="mdui-col-sm-6 mdui-col-md-4">
         <div class="mdui-card">
@@ -53,7 +53,7 @@
     </div>
   </div>
 
-  <div class="mdui-container3">
+  <div class="mdui-container">
     <div class="mdui-row">
       <div class="mdui-col-sm-6 mdui-col-md-4">
         <div class="mdui-card">
