--- a/index.html
+++ b/index.html
@@ -15,6 +15,28 @@
         <div class="mdui-card">
 
           <div class="mdui-card-media">
+            <img src="https://mjj.today/i/8v2Woi"/>
+            <div class="mdui-card-menu">
+               <button class="mdui-btn mdui-btn-icon mdui-text-color-white"> <i class="mdui-icon material-icons">code</i></button>
+              <button id="download_solver" class="mdui-btn mdui-btn-icon mdui-text-color-white"> <i class="mdui-icon material-icons">file_download</i>
+            </div>
+          </div>
+          <div class="mdui-card-primary">
+            <div class="mdui-card-primary-title">好好好课程表</div>
+            <div class="mdui-card-primary-subtitle">掌上教务系统</div>
+          </div>
+          <div class="mdui-card-content">支持查课表，查成绩，查考试</div>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <div class="mdui-container">
+    <div class="mdui-row">
+      <div class="mdui-col-sm-6 mdui-col-md-4">
+        <div class="mdui-card">
+
+          <div class="mdui-card-media">
             <img src="https://picst.sunbangyan.cn/2023/11/04/7389c7a1227d5e803855b5caf78e4567.png"/>
             <div class="mdui-card-menu">
                <button class="mdui-btn mdui-btn-icon mdui-text-color-white"> <i class="mdui-icon material-icons">code</i></button>
