--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <div class="mdui-card">
 
           <div class="mdui-card-media">
-            <img src="https://mjj.today/i/8v2Woi"/>
+            <img src="coursetable.png"/>
             <div class="mdui-card-menu">
                <button class="mdui-btn mdui-btn-icon mdui-text-color-white"> <i class="mdui-icon material-icons">code</i></button>
               <button id="download_solver" class="mdui-btn mdui-btn-icon mdui-text-color-white"> <i class="mdui-icon material-icons">file_download</i>
@@ -37,7 +37,7 @@
         <div class="mdui-card">
 
           <div class="mdui-card-media">
-            <img src="https://picst.sunbangyan.cn/2023/11/04/7389c7a1227d5e803855b5caf78e4567.png"/>
+            <img src="solver.png"/>
             <div class="mdui-card-menu">
                <button class="mdui-btn mdui-btn-icon mdui-text-color-white"> <i class="mdui-icon material-icons">code</i></button>
               <button id="download_solver" class="mdui-btn mdui-btn-icon mdui-text-color-white"> <i class="mdui-icon material-icons">file_download</i>
@@ -59,7 +59,7 @@
         <div class="mdui-card">
 
           <div class="mdui-card-media">
-            <img src="https://picdm.sunbangyan.cn/2023/11/04/473882010648ab66ce2544f1a35338b8.png"/>
+            <img src="shishuo.png"/>
             <div class="mdui-card-menu">
                <button class="mdui-btn mdui-btn-icon mdui-text-color-black"> <i class="mdui-icon material-icons">code</i></button>
               <button id="download_shishuo" class="mdui-btn mdui-btn-icon mdui-text-color-black"> <i class="mdui-icon material-icons">file_download</i>
@@ -81,7 +81,7 @@
         <div class="mdui-card">
 
           <div class="mdui-card-media">
-            <img src="https://picss.sunbangyan.cn/2023/11/04/573e9c7aa37e0a89993bd71aa4415d53.png"/>
+            <img src="studybar.png"/>
             <div class="mdui-card-menu">
                <button class="mdui-btn mdui-btn-icon mdui-text-color-white"> <i class="mdui-icon material-icons">code</i></button>
               <button id="download_studybar" class="mdui-btn mdui-btn-icon mdui-text-color-white"> <i class="mdui-icon material-icons">file_download</i>
