--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <img src="coursetable.png"/>
             <div class="mdui-card-menu">
                <button class="mdui-btn mdui-btn-icon mdui-text-color-white"> <i class="mdui-icon material-icons">code</i></button>
-              <button id="download_solver" class="mdui-btn mdui-btn-icon mdui-text-color-white"> <i class="mdui-icon material-icons">file_download</i>
+              <button id="download_coursetable" class="mdui-btn mdui-btn-icon mdui-text-color-white"> <i class="mdui-icon material-icons">file_download</i>
             </div>
           </div>
           <div class="mdui-card-primary">
@@ -102,6 +102,10 @@
     var myButton = document.getElementById('download_solver');
     myButton.addEventListener('click', function() {
       window.open('https://www.pgyer.com/solver', 'newWindow');
+});
+          var myButton = document.getElementById('download_coursetable');
+    myButton.addEventListener('click', function() {
+      window.open('https://www.pgyer.com/coursetable', 'newWindow');
 });
 var myButton1 = document.getElementById('download_shishuo');
     myButton1.addEventListener('click', function() {
